artifacthub/library/pod-security-policy/read-only-root-filesystem/1.1.1/samples/wildcard-prefix/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: psp-readonlyrootfilesystem
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptImages:
      - "safe-images.com/*"
